--- a/bombeiroSa - versao antiga/perfil.html
+++ b/bombeiroSa - versao antiga/perfil.html
@@ -24,10 +24,10 @@
 
         .button-group {
             display: flex;
-            flex-direction: column;
             gap: 20px;
             margin-top: 20px;
-            align-items: center; /* Centralize verticalmente os botões */
+            justify-content: center;
+            align-items: center;
         }
 
         .button {
@@ -38,8 +38,8 @@
             border-radius: 4px;
             font-size: 16px;
             cursor: pointer;
-            width: 100%;
-            max-width: 200px; /* Defina uma largura máxima para os botões */
+            max-width: 200px;
+            flex-grow: 1;
         }
 
         .logged-in-user {
@@ -129,7 +129,7 @@
             }
 
             .search-container {
-                display: none;
+                display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 10px;
@@ -190,7 +190,6 @@
         </a>
     </div>
 
-    <!-- Botão de Pesquisar com barra de pesquisa abaixo dos botões -->
     <div class="button-group">
         <div class="tab">
             <a href="ficha.html"><button class="button" onclick="openCity(event, 'Nova')">Nova Ficha</button></a>
@@ -199,7 +198,6 @@
         </div>
     </div>
 
-    <!-- Tab content -->
     <div id="Nova" class="tabcontent">
         <!-- Conteúdo da guia Nova Ficha aqui -->
     </div>
@@ -208,17 +206,15 @@
         <!-- Conteúdo da guia Histórico de Ficha aqui -->
     </div>
 
-    <div id="Pesquisar" class="tabcontent">
-        <div class="search-container" id="searchContainer">
-            <input type="text" class="search-input" placeholder="Pesquisar">
-            <button class="search-button">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
-                    <path
-                        d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z"
-                        fill="#efeff1"></path>
-                </svg>
-            </button>
-        </div>
+    <div class="search-container" id="searchContainer">
+        <input type="text" class="search-input" placeholder="Pesquisar">
+        <button class="search-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
+                <path
+                    d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z"
+                    fill="#efeff1"></path>
+            </svg>
+        </button>
     </div>
 
     <div class="ui">
@@ -229,16 +225,23 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    <!-- JavaScript para mostrar/ocultar a barra de pesquisa -->
     <script>
         function toggleSearch() {
             var searchContainer = document.getElementById("searchContainer");
+            var searchInput = document.querySelector(".search-input");
+            var searchButton = document.querySelector(".search-button");
+
             if (searchContainer.style.display === "none" || searchContainer.style.display === "") {
                 searchContainer.style.display = "flex";
+                searchInput.style.width = "100%";
+                searchButton.style.display = "block";
             } else {
                 searchContainer.style.display = "none";
+                searchInput.style.width = "0";
+                searchButton.style.display = "none";
             }
         }
     </script>
 </body>
+
 </html>
