--- a/bombeiroSa - versao atual/index.html
+++ b/bombeiroSa - versao atual/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <style>
         body {
@@ -105,7 +104,6 @@
             color: white;
             text-decoration: none;
         }
-
     </style>
 </head>
 
@@ -115,12 +113,33 @@
     </div>
     <div class="container">
         <div class="heading">Login</div>
-        <form action="" class="form">
+        <form action="" method="POST" class="form">
             <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
             <input required="" class="input" type="password" name="password" id="password" placeholder="Senha">
             <span class="forgot-password"><a href="#">Esqueceu a senha?</a></span>
-            <button class="login-button" type="button" onclick="window.location.href='perfil.html'">Entrar</button>
+            <button class="login-button" type="submit">Entrar</button>
         </form>
+
+        <?php
+            if ($_SERVER["REQUEST_METHOD"] == "POST") {
+                $email = $_POST["email"];
+                $senha = $_POST["password"];
+
+                // Execute consultas SQL para verificar as credenciais aqui
+                $sql = "SELECT * FROM usuarios WHERE email = '$email' AND senha = '$senha'";
+                $resultado = $conn->query($sql);
+
+                if ($resultado->num_rows == 1) {
+                    // Usuário autenticado com sucesso, redirecione para a página de perfil
+                    header("Location: perfil.html");
+                    exit();
+                } else {
+                    // Exiba uma mensagem de erro
+                    echo "Credenciais inválidas.";
+                }
+            }
+        ?>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
