--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -26,9 +26,9 @@
             display: flex;
             gap: 20px;
             margin-top: 30px;
+            margin-left: ;
             justify-content: center;
             flex-direction: column; /* Altere a direção para coluna */
-            align-items: center; /* Centralize horizontalmente */
         }
 
         .button {
