--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-body {
+        body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
@@ -28,8 +28,24 @@ body {
             gap: 20px;
             margin-top: 30px;
             justify-content: center;
-            /* Remova flex-direction: column; */
         }
+
+        .custom-button {
+            background-color: #e74c3c;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            width: auto; /* Defina a largura como automática */
+            margin: 5px; /* Adicione margem aos botões */
+        }
+
+        .logged-in-user {
+            color: #fff;
+            font-size: 20px;
+        }     
 
         .button {
             background-color: #e74c3c;
@@ -43,11 +59,6 @@ body {
             margin: 5px 0;
             /* Adicione width: auto; */
             width: auto;
-        }
-
-        .logged-in-user {
-            color: #fff;
-            font-size: 20px;
         }
 
         .search-container {
@@ -159,6 +170,7 @@ body {
 
         /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
         @media (min-width: 769px) {
+
             /* Adicione align-items: center; */
             .button-group {
                 flex-direction: row;
