--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -146,9 +146,7 @@
                 height: 30px;
             }
 
-            /* Remova flex-direction: column e align-items: center; */
             .button-group {
-                /* flex-direction: column; */
                 /* align-items: center; */
                 display: flex;
                 gap: 20px;
@@ -280,7 +278,19 @@
             }
         }
     </script>
-
+        function toggleSearch() {
+          var searchInput = document.querySelector(".search-input");
+          var searchButton = document.querySelector(".search-button");
+        
+          if (searchInput.style.width === "") {
+            searchInput.style.width = ""; // Remove the defined width
+            searchButton.style.display = "block";
+          } else {
+            searchInput.style.width = ""; // Remove the defined width
+            searchButton.style.display = "none";
+          }
+        }
+    </script>
 <!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script> -->
