--- a/bombeiroSa - versao atual/perfil.html
+++ b/bombeiroSa - versao atual/perfil.html
@@ -28,7 +28,7 @@
 }
 
 .radio-input {
-  --container_width: 300px;
+  container_width: 300px;
   position: relative;
   display: flex;
   align-items: center;
@@ -38,6 +38,7 @@
   width: var(--container_width);
   overflow: hidden;
   border: 1px solid rgba(53, 52, 52, 0.226);
+  justify-content: center;
 }
 
 .radio-input label {
