--- a/bombeiroSa - versao atual/ficha.html
+++ b/bombeiroSa - versao atual/ficha.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <title>Ficha da Ocorrência</title>
-<!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous"> -->
+
 </head>
 
 <style>
     body {
         margin: 0;
-    padding: 0;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    background-color: rgba(160, 161, 161, 0.055);
-    align-items: center;
-    min-height: 100%;
+        padding: 0;
+        font-size: 16px;
+        font-family: Arial, sans-serif;
+        background-color: rgba(160, 161, 161, 0.055);
+        align-items: center;
+        min-height: 100%;
     }
 
     .header {
@@ -94,7 +92,8 @@
         background-color: rgba(160, 161, 161, 0.055);
         margin: 0px auto 40px auto;
         border-radius: 5px;
-        height: 100%; /* Adicione esta linha */
+        height: 100%;
+        /* Adicione esta linha */
     }
 
     .form {
@@ -3367,7 +3366,7 @@
         </div>
     </div>
     </form>
-<!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    <!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script> -->
 </body>
